#Fix bug null langKey

--- a/server/src/main/resources/config/application-dev.yml
+++ b/server/src/main/resources/config/application-dev.yml
@@ -46,16 +46,10 @@ spring:
     liquibase:
         contexts: dev
     mail:
-        host: smtp.gmail.com
-        port: 587
-        username: notend2018@gmail.com
-        password: 123@play
-        properties:
-            mail:
-                smtp:
-                    auth: true
-                    starttls:
-                        enable: true
+        host: smtp.mailtrap.io
+        port: 465
+        username: 23751b94e48550
+        password: 62432123c7427a
     messages:
         cache-duration: PT1S # 1 second, see the ISO 8601 standard
     thymeleaf:
@@ -104,7 +98,7 @@ jhipster:
                 token-validity-in-seconds: 86400
                 token-validity-in-seconds-for-remember-me: 2592000
     mail:
-        from: notend2018@gmail.com
+        from: 37d881dd79-22b173@inbox.mailtrap.io
         base-url: http://127.0.0.1:80
     metrics: # DropWizard Metrics configuration, used by MetricsConfiguration
         jmx:
