--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,18 +9,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.Dark">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
-            android:name=".activity.list"
-            android:label="@string/title_activity_list"
+            android:name=".activity.Content"
             android:theme="@style/AppTheme.Dark">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".activity.Content"></activity>
+        <activity
+            android:name=".activity.Register"
+            android:label="Register"
+            android:theme="@style/AppTheme.Dark">
+        </activity>
+        <activity
+            android:name=".activity.LoginActivity"
+            android:label="Login"
+            android:theme="@style/AppTheme.Dark"></activity>
     </application>
 
 </manifest>
