--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     //Json
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:converter-jackson:2.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     //butter knife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
