--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,12 +21,6 @@
         <activity
             android:name=".activity.Content"
             android:theme="@style/AppTheme.Dark">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
         </activity>
         <activity
             android:name=".activity.Register"
@@ -37,6 +31,7 @@
             android:name=".activity.LoginActivity"
             android:label="Login"
             android:theme="@style/AppTheme.Dark"></activity>
+        <activity android:name=".activity.Payment"></activity>
     </application>
 
 </manifest>
