--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
             android:label="ChangePasswordActivity"
             android:theme="@style/AppTheme.Dark">
         </activity>
+        <activity android:name=".activity.DetailUser"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
