--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -56,6 +56,11 @@
             android:theme="@style/AppTheme">
 
         </activity>
+        <activity
+            android:name=".activity.PaypalActivity"
+            android:label="PayPal"
+            android:theme="@style/AppTheme.Dark">
+        </activity>
     </application>
 
 </manifest>
