--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,7 +45,9 @@
         </activity>
         <activity android:name=".activity.DetailUser"
             android:theme="@style/AppTheme">
-
+        </activity>
+        <activity android:name=".activity.FriendDetailUser"
+            android:theme="@style/AppTheme">
         </activity>
         <activity
             android:name=".activity.PaypalActivity"
