--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,5 +51,7 @@ dependencies {
     //butter knife
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    //Socket
+    implementation 'com.github.nkzawa:socket.io-client:0.3.0'
 
 }
